# uoa-lecture

./: Makefile  README.md  buidings_osm_Auckland Central.parquet  demo.ipynb  main.py  momepy_metrics.py  pyproject.toml  streets.py  streets_osm_Auckland Central.parquet
notebooks/: demo.ipynb
uoa_lecture/: __init__.py  clustering.py  gba.py
