[project]
name = "uoa-lecture"
version = "0.1.0"
description = "Supporting materials for UoA lecture on March 23 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clustergram>=0.8.1",
    "ipykernel>=7.2.0",
    "neatnet>=0.1.5",
    "osmnx>=2.1.0",
    "pyarrow>=23.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = [
    "bokeh>=3.8.0",
    "clustergram>=0.8.1",
    "folium>=0.20.0",
    "geopandas>=1.1.0",
    "jupyter>=1.1.1",
    "libpysal>=4.13.0",
    "logging>=0.4.9.6",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.3",
    "momepy>=0.10.0",
    "numba>=0.62.1",
    "osmnx>=2.0.4",
    "pyarrow>=22.0.0",
    "rioxarray>=0.19.0",
    "xvec>=0.5.0",
]
